fixed percentage issue

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ SUPABASE_URL=https://your-project-id.supabase.co
 SUPABASE_KEY=your-supabase-service-key-here
 SUPABASE_ANON_KEY=your-supabase-anon-public-key-here
 
+# PDF Security
+PDF_OWNER_PASSWORD=EclariSecure2024!
+
 # Instructions:
 # 1. Go to https://supabase.com and create a new project
 # 2. In your Supabase dashboard, go to Settings > API
