--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
 # Core Flask
 flask>=3.0.0,<4
 
-# Supabase integration
-supabase==2.20.0
-gotrue>=2.0.0
-postgrest>=0.10.0
-realtime>=1.0.0
-storage3>=0.5.0
+# Supabase integration - using stable version
+supabase==2.11.0
 
 # Environment variables
 python-dotenv==1.1.1
